# sub

./: .env.template  .eslintrc.json  .gitignore  AGENT_TYPES.md  API_INTEGRATION_COMPLETE.md  CLEAR_CACHE.md  CONTRIBUTING.md  CREATE_AGENT_WALLETS.md  ENV_SETUP.md  FIXED_WALLET_404.md  FIX_PHANTOM_TRUSTED_SITES.md  LICENSE  MARKETPLACE_API_SETUP.md  NEXT_STEPS.md  PHASE1_COMPLETE.md  PHASE1_TESTING.md  PHASE2_PROGRESS.md  PHASE2_TESTING.md  PRODUCTION_ROADMAP.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START_GUIDE.md  QUICK_TEST.md  README.md  RESTART_SERVERS.md  SESSION_PROGRESS.md  SESSION_SUMMARY.md  SETUP.md  SIMPLE_SETUP.md  SOLANA_NATIVE.md  SOLANA_PAY_GUIDE.md  SOLANA_SETUP.md  START.sh  START_API.sh  TEST_PHASE1.sh  TEST_WALLET.sh  TEST_WALLET_CONNECTION.md  TROUBLESHOOTING.md  UI_ENHANCEMENTS.md  WALLET_CONNECTION_EXPLAINED.md  (+14 more)
apps/agents/: Dockerfile  package.json
apps/agents/src/: index.ts
apps/agents/src/agents/: executor.ts  (+3 more)
apps/api/: Dockerfile  package.json
apps/api/prisma/: schema.prisma
apps/api/src/: index.ts
apps/circuits/: .gitignore  Nargo.toml  README.md
apps/circuits/src/: main.nr  spend_proof.nr
apps/contracts/: .gitignore  README.md  foundry.toml
apps/contracts/script/: Deploy.s.sol
apps/contracts/src/: AgentMarketplace.sol  AgentWallet.sol  SpendIntent.sol  ZkReceiptRegistry.sol
apps/solana-programs/: Anchor.toml  README.md  package.json  tsconfig.json
apps/solana-programs/programs/agent-wallet/: Cargo.toml
apps/solana-programs/programs/agent-wallet/src/: lib.rs
apps/web/: Dockerfile  next.config.js  package.json
(+55 files in other folders)
