[package]
name = "subra-agent-wallet"
version = "0.1.0"
description = "SUBRA Agent Wallet - Secure Solana wallet for AI agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "subra_agent_wallet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

